<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Scanner.Permission.GetPermissionFrag">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp">

        <RelativeLayout
            android:id="@+id/top1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:id="@+id/img_camera"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_220sdp"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@mipmap/ic_launcher_round" />

                <TextView
                    android:id="@+id/enable_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/access_camera"
                    android:textAllCaps="true"
                    android:textColor="#000000"
                    android:textSize="@dimen/_15sdp"
                    android:textAlignment="center"
                    android:fontFamily="sans-serif-black"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_15sdp"
                    android:text="@string/access_intro"
                    android:textColor="#222"
                    android:fontFamily="sans-serif"
                    android:textSize="@dimen/_13sdp"
                    android:textAlignment="center"
                    android:paddingTop="10dp"/>

                <Button
                    android:id="@+id/enable_camera"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="#222"
                    android:text="@string/allow_access"
                    android:textColor="@android:color/white" />

                <TextView
                    android:id="@+id/notNow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:text="@string/dont_allow"
                    android:textAlignment="center"
                    android:textSize="@dimen/_12sdp"/>

            </LinearLayout>


        </RelativeLayout>



    </RelativeLayout>

</FrameLayout>