<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/scaner_intro"
    android:background="@android:color/white"
    tools:context=".Scanner.Intro.ScanIntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginRight="@dimen/_28sdp"
        android:layout_marginLeft="@dimen/_28sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_250sdp"
                android:layout_marginTop="@dimen/_35sdp"
                android:src="@drawable/camera_intro" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_25sdp"
                android:text="@string/welcome_scan"
                android:textAlignment="center"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:textSize="@dimen/_15sdp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/intro_scan"
                android:textAlignment="center"
                android:textSize="@dimen/_13sdp" />

            <Button
                android:id="@+id/btn_start_scan"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_38sdp"
                android:background="#222"
                android:text="@string/start_scan"
                android:textColor="@android:color/white" />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>